--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Photography Portfolio</title>
+  <title>Aidan Fuentes Photography</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
@@ -27,7 +27,7 @@
   <!-- Hero Section -->
   <div class="jumbotron text-center">
     <h1 class="display-4">Welcome to My Photography Portfolio</h1>
-    <p class="lead">Capturing the moments that captivate your heart.</p>
+    <p class="lead">Good pics</p>
     <a class="btn btn-primary btn-lg" href="pages/portfolio.html" role="button">View Portfolio</a>
   </div>
 
