--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Photography</a>
+    <a class="navbar-brand" href="#">Aidan Fuentes</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,7 +28,7 @@
   <div class="jumbotron text-center">
     <h1 class="display-4">Welcome to My Photography Portfolio</h1>
     <p class="lead">Good pics</p>
-    <a class="btn btn-primary btn-lg" href="pages/portfolio.html" role="button">View Portfolio</a>
+    <a class="btn btn-primary btn-lg" href="portfolio.html" role="button">View Portfolio</a>
   </div>
 
   <!-- Featured Section -->
