--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/portfolio.html">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <div class="jumbotron text-center">
-    <h1 class="display-4">Welcome to My Photography Portfolio</h1>
+    <h1 class="display-4">Aidan Fuentes Photography</h1>
     <p class="lead">Good pics</p>
     <a class="btn btn-primary btn-lg" href="portfolio.html" role="button">View Portfolio</a>
   </div>
