--- a/about.html
+++ b/about.html
@@ -25,21 +25,21 @@
   </nav>
 
   <!-- About Section -->
-  <div class="container">
-    <h2 class="text-center my-4">About Me</h2>
-    <div class="row">
-      <div class="col-md-6">
-        <img src="../images/profile.jpg" alt="Your Profile Picture" class="img-fluid rounded-circle">
-      </div>
-      <div class="col-md-6">
-        <p>Hello! I’m [Your Name], a passionate photographer based in [Your Location]. I specialize in capturing moments that matter, whether it’s a wedding, a portrait session, or a landscape that takes your breath away. My goal is to create images that tell stories and evoke emotions. Thank you for visiting my portfolio!</p>
-      </div>
+  <h2 class="text-center my-4">About Me</h2>
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../images/profile.jpg" alt="Your Profile Picture" class="img-fluid rounded-circle">
+    </div>
+    <div class="col-md-6">
+      <p>Hello! I’m Aidan, a passionate photographer based in Reynoldsburg, Ohio. While I’m just starting out in professional photography, my love for capturing moments has been with me since childhood. My first camera sparked a lifelong fascination with documenting the world around me.</p>
+      <p>I specialize in portrait photography, focusing on capturing genuine moments and true selves, even for those who are camera shy. My goal is to make every session comfortable and enjoyable, allowing personalities to shine through naturally. Alongside portrait photography, I have a deep appreciation for nature, which inspires me to photograph landscapes and wildlife, showcasing the beauty and diversity of the natural world.</p>
+      <p>Thank you for stopping by! I am excited about the opportunity to work with you and create lasting memories through photography. Feel free to explore my <a href="portfolio.html">portfolio</a> and <a href="contact.html">get in touch</a> for any inquiries or collaborations. Let’s make something beautiful together!</p>
     </div>
   </div>
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <p>&copy; 2024 Aidan Fuentes. All rights reserved.</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
