--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <p>&copy; 2024 Aidan Fuentes. All rights reserved.</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
