--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <h2 class="text-center my-4">Featured Works</h2>
     <div class="row">
       <div class="col-md-4">
-        <img src="images/placeholder.jpg" alt="Featured Image" class="img-fluid">
+        <img src="Malik-23.jpg" alt="Featured Image" class="img-fluid">
         <p class="text-center">Placeholder Text</p>
       </div>
       <div class="col-md-4">
-        <img src="images/placeholder.jpg" alt="Featured Image" class="img-fluid">
+        <img src="Malik-05.jpg" alt="Featured Image" class="img-fluid">
         <p class="text-center">Placeholder Text</p>
       </div>
       <div class="col-md-4">
-        <img src="images/placeholder.jpg" alt="Featured Image" class="img-fluid">
+        <img src="Malik-01.jpg" alt="Featured Image" class="img-fluid">
         <p class="text-center">Placeholder Text</p>
       </div>
     </div>
@@ -52,7 +52,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <p>&copy; 2024 Aidan Fuentes. All rights reserved.</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
