--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Me - Aidan's Photography</title>
+  <title>Contact Me - Aidan Fuentes</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
@@ -38,12 +38,17 @@
       text-align: center;
       margin-top: 50px;
     }
+
+    .form-control {
+        padding: 12px 15px; /* Increase padding to prevent clipping */
+        line-height: 1.5; /* Ensure enough space for text */
+    }
   </style>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html">Aidan's Photography</a>
+    <a class="navbar-brand" href="../index.html">Aidan Fuentes</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
