--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   <h2 class="text-center my-4">About Me</h2>
   <div class="row">
     <div class="col-md-6">
-      <img src="../images/profile.jpg" alt="Your Profile Picture" class="img-fluid rounded-circle">
+      <img src="Bio Pic.JPG"Your Profile Picture" class="img-fluid rounded-circle">
     </div>
     <div class="col-md-6">
       <p>Hello! I’m Aidan, a passionate photographer based in Reynoldsburg, Ohio. While I’m just starting out in professional photography, my love for capturing moments has been with me since childhood. My first camera sparked a lifelong fascination with documenting the world around me.</p>
