--- a/about.html
+++ b/about.html
@@ -3,14 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>About Me - Aidan's Photography</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    .about-container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      margin-top: 50px;
+      padding: 20px;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    .profile-pic {
+      flex: 1 1 250px;
+      max-width: 250px;
+      margin: 20px;
+      border-radius: 50%;
+      border: 5px solid #007bff;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+    .bio-text {
+      flex: 2 1 400px;
+      margin: 20px;
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html">Photography</a>
+    <a class="navbar-brand" href="../index.html">Aidan's Photography</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,22 +45,22 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- About Section -->
-  <h2 class="text-center my-4">About Me</h2>
-  <div class="row">
-    <div class="col-md-6">
-      <img src="Bio Pic.JPG"Your Profile Picture" class="img-fluid rounded-circle">
-    </div>
-    <div class="col-md-6">
-      <p>Hello! I’m Aidan, a passionate photographer based in Reynoldsburg, Ohio. While I’m just starting out in professional photography, my love for capturing moments has been with me since childhood. My first camera sparked a lifelong fascination with documenting the world around me.</p>
-      <p>I specialize in portrait photography, focusing on capturing genuine moments and true selves, even for those who are camera shy. My goal is to make every session comfortable and enjoyable, allowing personalities to shine through naturally. Alongside portrait photography, I have a deep appreciation for nature, which inspires me to photograph landscapes and wildlife, showcasing the beauty and diversity of the natural world.</p>
-      <p>Thank you for stopping by! I am excited about the opportunity to work with you and create lasting memories through photography. Feel free to explore my <a href="portfolio.html">portfolio</a> and <a href="contact.html">get in touch</a> for any inquiries or collaborations. Let’s make something beautiful together!</p>
+  <div class="container">
+    <h2 class="text-center my-4">About Me</h2>
+    <div class="about-container">
+      <img src="Bio Pic.JPG" alt="Your Profile Picture" class="profile-pic">
+      <div class="bio-text">
+        <p>Hello! I’m Aidan, a passionate photographer based in Reynoldsburg, Ohio. While I’m just starting out in professional photography, my love for capturing moments has been with me since childhood. My first camera sparked a lifelong fascination with documenting the world around me.</p>
+        <p>I specialize in portrait photography, focusing on capturing genuine moments and true selves, even for those who are camera shy. My goal is to make every session comfortable and enjoyable, allowing personalities to shine through naturally. Alongside portrait photography, I have a deep appreciation for nature, which inspires me to photograph landscapes and wildlife, showcasing the beauty and diversity of the natural world.</p>
+        <p>Thank you for stopping by! I am excited about the opportunity to work with you and create lasting memories through photography. Feel free to explore my <a href="portfolio.html">portfolio</a> and <a href="contact.html">get in touch</a> for any inquiries or collaborations. Let’s make something beautiful together!</p>
+      </div>
     </div>
   </div>
 
@@ -42,6 +69,7 @@
     <p>&copy; 2024 Aidan Fuentes. All rights reserved.</p>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
